syntax = "proto3";
package pb;
option go_package = "./";

message SocialRelationActionRequest {
    string token = 1;
    int64 to_user_id = 2;
    int32 action_type = 3;
}

message SocialRelationActionResponse {
    int32 status_code = 1;
    string status_msg = 2;
}

message SocialRelationFollowListRequest {
    int64 user_id = 1;
    string token = 2;
}

message SocialRelationFollowListResponse {
    int32 status_code = 1;
    string status_msg = 2;
    repeated User user_list = 3;
}

message SocialRelationFollowerListRequest {
    int64 user_id = 1;
    string token = 2;
}

message SocialRelationFollowerListResponse {
    int32 status_code = 1;
    string status_msg = 2;
    repeated User user_list = 3;
}

message SocialRelationFriendListRequest {
    int64 user_id = 1;
    string token = 2;
}

message SocialRelationFriendListResponse {
    int32 status_code = 1;
    string status_msg = 2;
    repeated User user_list = 3;
}

message User {
    int64 id = 1;
    string name = 2;
}

message SocialMessageChatRequest {
    string token = 1;
    int64 to_user_id = 2;
    int32 action_type = 3;
    string content = 4;
}

message SocialMessageChatResponse {
    int32 status_code = 1;
    string status_msg = 2;
}

message Message {
    int64 id = 1;
    string content = 2;
    int64 create_time = 3;
    int64 from_user_id = 4;
    int64 to_user_id = 5;
}

message SocialMessageHistoryRequest {
    string token = 1;
    int64 to_user_id = 2;
    int64 pre_msg_time = 3;
}

message SocialMessageHistoryResponse {
    int32 status_code = 1;
    string status_msg = 2;
    repeated Message message_list = 3;
}

service RelationService {
    rpc SocialRelationAction(SocialRelationActionRequest) returns (SocialRelationActionResponse) {}
    rpc SocialRelationFollowList(SocialRelationFollowListRequest) returns (SocialRelationFollowListResponse) {}
    rpc SocialRelationFollowerList(SocialRelationFollowerListRequest) returns (SocialRelationFollowerListResponse) {}
    rpc SocialRelationFriendList(SocialRelationFriendListRequest) returns (SocialRelationFriendListResponse) {}
}

service MessageService {
    rpc SocialMessageChat(SocialMessageChatRequest) returns (SocialMessageChatResponse) {}
    rpc SocialMessageHistory(SocialMessageHistoryRequest) returns (SocialMessageHistoryResponse) {}
}